--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <title>Chocolate Pizza</title>
+  <meta name="description" content="Chocolate Pizza">
+  <meta name="author" content="Jeff G">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -21,6 +21,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -32,10 +33,110 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
+    <div class="row" style="margin-top: 5%">
+      <div class="one columns">
+        <img src="images/logo.png"/>
+      </div>
+      <div class="seven columns">
+        <h3>Delicous</h2>
+        <p>THE BEST FOOD BLOG ON THE WEB</p>
+      </div>
+      <div class="four columns"/>
+        <img src="images/fb-icon.png"/>
+        <img src="images/twit-icon.png"/>
+        <img src="images/gp-icon.png"/>
+        <img src="images/insta-icon.png"/>
+        <img src="images/flic-icon.png"/>
+        <img src="images/pint-icon.png"/>
+        <img src="images/rss-icon.png"/>
+        <img src="images/mail-icon.png"/>
+      </div>
+    </div>
+
     <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+      <div class="twelve columns">
+        <hr>
+      </div>
+    </div>
+
+    <div class="row" style="margin-top: 5%">
+      <div class="eleven columns">
+        <h4>Chocolate Pizza</h4>
+        <p>POSTED ON 15 DEC 2013 / Desserts</p>
+      </div>
+      <div class="one column">
+        <img src="images/print-icon.png">
+        <p style="float: right">Print</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="twelve columns">
+        <img src="images/choco-pizza.png"/>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="twelve columns">
+        <p>
+          For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="twelve columns">
+        <p>
+          Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="twelve columns">
+        <p>
+          Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="twelve columns">
+        <img src="images/list-bg.png"/>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="twelve columns">
+        <hr>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="one column">
+        <img src="images/van-pic.png"/>
+      </div>
+      <div class="eight columns">
+        <h6>Vanessa Stevenson</h6>
+        <p>
+          Food enthusiast, photography fan. Add a pinch of raw foodsim and that's pretty much who I am.
+        </p>
+      </div>
+      <div class="three columns">
+        <button>Share Recipe</button>
+      </div>
+    </div>
+
+    <div class="row">
+      <div id="imageAlign" class="twelve columns">
+        <img src="images/small-logo.png"/>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="twelve columns">
+        <p>Delicious &copy; 2013 - All Rights Reserved.</p>
+        <p>Proudly published with Ghost.</p>
       </div>
     </div>
   </div>
