--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -37,11 +38,11 @@
       <div class="one columns">
         <img src="images/logo.png"/>
       </div>
-      <div class="seven columns">
-        <h3>Delicous</h2>
+      <div class="eight columns">
+        <h3>Delicous</h3>
         <p>THE BEST FOOD BLOG ON THE WEB</p>
       </div>
-      <div class="four columns"/>
+      <div class="three columns">
         <img src="images/fb-icon.png"/>
         <img src="images/twit-icon.png"/>
         <img src="images/gp-icon.png"/>
@@ -59,7 +60,7 @@
       </div>
     </div>
 
-    <div class="row" style="margin-top: 5%">
+    <div class="row">
       <div class="eleven columns">
         <h4>Chocolate Pizza</h4>
         <p>POSTED ON 15 DEC 2013 / Desserts</p>
@@ -78,7 +79,7 @@
 
     <div class="row">
       <div class="twelve columns">
-        <p>
+        <p class="marginBottom">
           For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.
         </p>
       </div>
@@ -86,7 +87,7 @@
 
     <div class="row">
       <div class="twelve columns">
-        <p>
+        <p class="marginBottom">
           Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.
         </p>
       </div>
@@ -94,15 +95,32 @@
 
     <div class="row">
       <div class="twelve columns">
-        <p>
+        <p class="marginBottom">
           Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.
         </p>
       </div>
     </div>
 
-    <div class="row">
-      <div class="twelve columns">
-        <img src="images/list-bg.png"/>
+    <div id="bgImage" class="row">
+        <div class="six columns">
+          <ul>
+             <li><input type="checkbox"> 1 1/2 cups milk</li>
+             <li><input type="checkbox"> 1/2 cup mascarpone</li>
+             <li><input type="checkbox"> 1/2 tsp pink salt</li>
+             <li><input type="checkbox"> 1 lb Black Mission Figs</li>
+             <li><input type="checkbox"> 1/2 cup brown sugar</li>
+             <li><input type="checkbox"> 2-4 tbsp water</li>
+          </ul>
+        </div>
+        <div class="six columns">
+          <ul>
+            <li><input type="checkbox"> 1 1/2 cups heavy cream</li>
+            <li style="text-decoration: line-through"><input type="checkbox" checked> 1/3 granulated sugar</li>
+            <li style="text-decoration: line-through"><input type="checkbox" checked> 2 egg yolks</li>
+            <li><input type="checkbox"> 1 lemon, juiced</li>
+            <li><input type="checkbox"> 2 tbsp butter</li>
+            <li><input type="checkbox"> 1 cup honey roasted pecans, roughly chopped</li>
+          </ul>
       </div>
     </div>
 
@@ -128,15 +146,15 @@
     </div>
 
     <div class="row">
-      <div id="imageAlign" class="twelve columns">
+      <div class="twelve columns">
         <img src="images/small-logo.png"/>
       </div>
     </div>
 
     <div class="row">
       <div class="twelve columns">
-        <p>Delicious &copy; 2013 - All Rights Reserved.</p>
-        <p>Proudly published with Ghost.</p>
+        <p class="alignCenter">Delicious &copy; 2013 - All Rights Reserved.</p>
+        <p class="alignCenter">Proudly published with Ghost.</p>
       </div>
     </div>
   </div>
