--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
 
     <div class="row">
       <div class="twelve columns">
-        <img src="images/small-logo.png"/>
+        <div class="four columns offset-by-six">
+          <img class="centerImage" src="images/small-logo.png"/>
+        </div>
       </div>
     </div>
 
